# pods

_pods/: __init__.py  version.py
_pods/data/pod-templates/basic/: Makefile  README  __template_info.xml  pod.xml
_pods/data/pod-templates/basic/cmake/: pods.cmake
_pods/data/pod-templates/lcm/: CMakeLists.txt  __template_info.xml  pod.xml
_pods/data/pod-templates/lcm/cmake/: lcmtypes.cmake
_pods/data/pod-templates/python/: CMakeLists.txt  __template_info.xml
cmake/: pods.cmake
pods-dev/_pods/: version.py
pods-dev/_pods/data/pod-templates/basic/cmake/: pods.cmake
pods-dev/_pods/data/pod-templates/python/cmake/: pods.cmake
